# architect-c4-mcp

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.sidecar.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONCEPT.md  MCP_TOOLS.md  PUBLISH.md  QUICKSTART.md  VIEWER.md  WASM_VIEWER.md
docs/adr/: 0001-hex-solid-revision.md  0001-sidecar-docs-mount.md  0002-reject-dangling-relationships.md  0002-toml-on-disk.md  0003-full-c4-layers.md  0003-rust-write-queue.md  0004-code-level-mermaid-classdiagram.md  0004-viewer-urls.md  0005-c4-adr-flow-contract.md  0005-wasm-canvas-viewer-prototype.md  0006-architecture-navigate-mcp.md  0006-matryoshka-port-routing.md  0007-structured-adr-json.md  0008-flow-kinds-v1.md  0009-atom-external-kinds.md  0010-structured-code-members.md
docs/examples/: big-bank-internet-banking.md
infra/deploy/: CURSOR.mcp.json  CURSOR.mcp.proxy.json  Caddyfile  README.md  registry.json  vmcp.toml
infra/deploy/skills/: architecture_decision_records.yaml  c4_architect_modeling.yaml  mermaid_viewer_theme.yaml  wasm_c4_viewer.yaml
infra/deploy/systemd/: architect-c4.env  architect-c4.service  vmcp.service
infra/vmcp/: registry.architect-c4.json
infra/vmcp/specs/: architect-c4.json
python/architect_c4/: __init__.py  prompts.py  server.py
python/architect_c4/static/wasm/: architect_c4_wasm.d.ts  architect_c4_wasm.js  architect_c4_wasm_bg.wasm  architect_c4_wasm_bg.wasm.d.ts  package.json
schemas/: adr.json  code_member.json  flow.json
scripts/: enrich_ceph_code_mcp.py  mcp_architect_client.py  mcp_fix_rgw_log_c4.py  mcp_migrate_v1_atom_edges.py  mcp_seed_architect_c4_self.py  mcp_seed_rgw_code_from_lsp.py  mcp_seed_rgw_into_ceph_rados.py  mcp_seed_rgw_usage_adr.py  mcp_seed_rgw_usage_code.py  python-coverage.sh  rust-coverage.sh  seed_ceph_c4.py  sync_ceph_classes_from_lsp.py
tests/: test_server_tools.py
