[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "architect-c4"
version = "0.3.0"
description = "C4 architecture MCP — FastMCP slim façade over hex Rust crates"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastmcp[tasks]>=2.0",
    "pydantic>=2.12",
    "architect-c4-app",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.12",
    "maturin>=1.8,<2",
]

[project.scripts]
architect-c4 = "architect_c4.server:main"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "architect_c4._native"
manifest-path = "packages/architect-c4-app/Cargo.toml"

[tool.uv]
package = true

[tool.uv.workspace]
members = [".", "packages/architect-c4-app"]

[tool.uv.sources]
architect-c4-app = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["python", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Russian prompt/docs strings intentionally use Cyrillic (looks like Latin in RUF001).
ignore = ["RUF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.coverage.run]
source = ["architect_c4"]
branch = true

[tool.coverage.report]
fail_under = 93
show_missing = true
