[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "architect-c4-mcp"
version = "0.3.5"
description = "C4 architecture MCP sidecar — TOML under docs/, Rust write queue"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "hewimetall" }]
keywords = ["mcp", "c4", "architecture", "adr", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "fastmcp[tasks]>=2.0",
    "pydantic>=2.12",
]

[project.urls]
Homepage = "https://github.com/hewimetall/architect-c4-mcp"
Repository = "https://github.com/hewimetall/architect-c4-mcp"
Documentation = "https://github.com/hewimetall/architect-c4-mcp/blob/main/docs/QUICKSTART.md"
Issues = "https://github.com/hewimetall/architect-c4-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.12",
    "maturin>=1.8,<2",
]

[project.scripts]
architect-c4-mcp = "architect_c4.server:main"
architect-c4 = "architect_c4.server:main"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "architect_c4._native"
manifest-path = "packages/architect-c4-app/Cargo.toml"

[tool.maturin.generate-ci.github]
trusted-publishing = true
publishing-environment = "pypi"

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["python", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Russian prompt/docs strings intentionally use Cyrillic (looks like Latin in RUF001).
ignore = ["RUF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.coverage.run]
source = ["architect_c4"]
branch = true

[tool.coverage.report]
fail_under = 93
show_missing = true
